[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.901961, 0.752941, 0.494118, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 120.0
margin_top = 16.0
margin_right = 364.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.317647, 0.65098, 0.941176, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
margin_left = 136.0
margin_top = 104.0
margin_right = 282.0
margin_bottom = 143.0
custom_colors/font_color = Color( 0.317647, 0.65098, 0.941176, 1 )
custom_fonts/font = SubResource( 3 )
text = "RETRY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 136.0
margin_top = 152.0
margin_right = 282.0
margin_bottom = 191.0
custom_colors/font_color = Color( 0.317647, 0.65098, 0.941176, 1 )
custom_fonts/font = SubResource( 3 )
text = "MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 208.0
margin_right = 252.0
margin_bottom = 241.0
custom_colors/font_color = Color( 0.317647, 0.65098, 0.941176, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "HIGH SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScoreLabel" type="Label" parent="."]
margin_left = 184.0
margin_top = 72.0
margin_right = 200.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.317647, 0.65098, 0.941176, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
